--- a/apis/3DStest.html
+++ b/apis/3DStest.html
@@ -21,7 +21,7 @@
       });
     </script>
     <script 
-    src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-h7R2CQrUbkJYvi32">
+    src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="">
 </script>
 </body>
 </html>
