--- a/apis/3DStest.html
+++ b/apis/3DStest.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-h7R2CQrUbkJYvi32">
+
+  </script>
+  <title>Document</title>
 </head>
+
 <body>
-    <h1>Hello There</h1>
-    <button id="pay-button">Pay!</button>
- 
-    <script type="text/javascript">
-      // For example trigger on button clicked, or any time you need
-      var payButton = document.getElementById('pay-button');
-      payButton.addEventListener('click', function () {
-        // Trigger snap popup. @TODO: Replace TRANSACTION_TOKEN_HERE with your transaction token
-        window.snap.pay('133b6293-2c03-4e48-9707-07ccdf819b14');
-        // customer will be redirected after completing payment pop-up
-      });
-    </script>
-    <script 
-    src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="">
-</script>
+  <h1>Hello There</h1>
+  <button id="pay-button">Pay!</button>
+
+  <script type="text/javascript">
+
+    // For example trigger on button clicked, or any time you need
+    var payButton = document.getElementById('pay-button');
+    payButton.addEventListener('click', function () {
+      // Trigger snap popup. @TODO: Replace TRANSACTION_TOKEN_HERE with your transaction token
+      const token =  mtGenerateTransactionToken()
+      console.log(token)
+      // window.snap.pay('592c20a2-7017-497c-8823-127ec9935aec', {
+      //   onSuccess: function (result) { console.log('success'); console.log(result); },
+      //   onPending: function (result) { console.log('pending'); console.log(result); },
+      //   onError: function (result) { console.log('error'); console.log(result); },
+      //   onClose: function () { console.log('customer closed the popup without finishing the payment'); }
+      // });
+      // // customer will be redirected after completing payment pop-up
+    });
+  </script>
+
+  <script src="../apiFunctions.js">
+
+  </script>
+  <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
 </body>
+
 </html>
